# mgsplayer

./: .gitignore  CMakeLists.txt  README.md  build-windows.sh  main.cpp  mgs_engine.cpp  mgs_engine.h
libkss/modules/emu2149/: CHANGELOG.md
libkss/modules/emu8950/: emu8950.c
libkss/modules/kmz80/: kmz80c.c
libkss/src/: kssplay.c
libkss/src/vm/: vm.c
